--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,5 +2,11 @@ main: mundotv.playerconfig.PluginMain
 name: PlayerConfig
 version: 1.0
 author: mundotv789123
+api: 1.19
 commands:
-  teste:
+  sniper:
+    description: Ativa ou desativa o modo sniper
+    usage: /<command> toggle|set_spawn|set_sniper_spawn|set_portal
+  randomblocks:
+    description: Ativa ou desativa o modo random blocks
+    usage: /<command>
