--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,15 +8,7 @@ sniper:
       data: ''
       amount: 1
   portal:
-    - x: 5
-      y: -60
-      z: 29
-    - x: 4
-      y: -60
-      z: 29
-    - x: 3
-      y: -60
-      z: 29
+    block: 'WHITE_TERRACOTTA'
   spawn:
     x: 0
     y: 100
